<resources>
    <string name="app_name">PianoGrupo02</string>
    <string name="re">Re</string>
    <string name="mi">Mi</string>
    <string name="teclado_clasico">Teclado Clásico</string>
    <string name="sol">Sol</string>
    <string name="fa">Fa</string>
    <string name="la">La</string>
    <string name="si">Si</string>
    <string name="dos">Do</string>
    <string name="doSostenido"> </string>
    <string name="DoSostenido" />
    <string name="txt_tituloanimal">Teclado: animales de la selva</string>
    <string name="descripelefante">elefante</string>
    <string name="descripimagen_de_ave">Imagen de ave</string>
    <string name="descripimagen_de_serpiente">Imagen de serpiente</string>
    <string name="descripimagen_de_mono">Imagen de mono</string>
    <string name="descripimagen_de_rana">Imagen de rana</string>
    <string name="txtbtnelefante">Elefante</string>
    <string name="txtbtnave">Ave</string>
    <string name="txtbtnmono">Mono</string>
    <string name="txtbtnleon">León</string>
    <string name="txtbtnserpiente">Serpiente</string>
    <string name="txtbtnrana">Rana</string>
    <string name="txtbtnaguila">Águila</string>
    <string name="arpa"> </string>
    <string name="saxofon"> </string>
    <string name="violin"> </string>
    <string name="guitarra"> </string>
    <string name="flauta"> </string>
    <string name="trompeta"> </string>
    <string name="tambor"> </string>
    <string name="imagen8">Imagen8</string>
    <string name="imagen7">imagen7</string>
    <string name="imagen6">imagen6</string>
    <string name="imagen5">imagen5</string>
    <string name="imagen4">imagen4</string>
    <string name="imagen2">imagen2</string>
    <string name="imagen1">imagen1</string>
    <string name="teclado_instrumentos">Teclado: Instrumentos</string>
    <string name="acerca_de">Acerca de</string>
    <string name="tipo_de_piano">Tipo de piano</string>
    <string name="salir">Salir</string>
    <string name="imagen_de_leon">Imagen de leon</string>
    <string name="imagen_de_aguila">Imagen de aguila</string>
    <string name="desarrolladores">Desarrolladores:</string>
    <string name="merari">Merari Angelica Perdomo Figueroa</string>
    <string name="ver">Verónica Lisseth Marín Santos</string>
    <string name="karen">Karen Andrea López Magaña</string>
    <string name="foto_grupal">foto_grupal</string>
</resources>