<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/teatro"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".pIntrumentos">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="417dp"
        android:layout_height="wrap_content"
        android:background="#94220202"
        android:gravity="center"
        android:text="@string/teclado_instrumentos"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="106dp"
            android:layout_height="50dp"
            android:contentDescription="@string/imagen1"
            app:srcCompat="@drawable/tambor"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="92dp"
            android:layout_height="50dp"
            android:contentDescription="@string/imagen2"
            app:srcCompat="@drawable/trompeta" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:contentDescription="@string/imagen4"
            app:srcCompat="@drawable/flauta" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="106dp"
            android:layout_height="50dp"
            android:contentDescription="@string/imagen5"
            app:srcCompat="@drawable/guitarra"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="98dp"
            android:layout_height="50dp"
            android:contentDescription="@string/imagen6"
            app:srcCompat="@drawable/violin" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:contentDescription="@string/imagen7"
            app:srcCompat="@drawable/saxofono" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:contentDescription="@string/imagen8"
            app:srcCompat="@drawable/arpa"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#B5780116"
            android:gravity="bottom|center_horizontal"
            android:onClick="SonarTambor"
            android:paddingTop="2dp"
            android:text="@string/tambor"
            app:cornerRadius="0dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#B5F7B538"
            android:gravity="bottom|center_horizontal"
            android:onClick="SonarTrompeta"
            android:text="@string/trompeta"
            app:cornerRadius="0dp"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#B5DB7C26"
            android:gravity="bottom|center_horizontal"
            android:onClick="SonarFlauta"
            android:text="@string/flauta"
            app:cornerRadius="0dp"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#B5D8572A"
            android:gravity="bottom|center_horizontal"
            android:onClick="SonarGuitarra"
            android:text="@string/guitarra"
            app:cornerRadius="0dp"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#B5C32F27"
            android:gravity="bottom|center_horizontal"
            android:onClick="SonarViolin"
            android:text="@string/violin"
            app:cornerRadius="0dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#B5723D46"
            android:gravity="bottom|center_horizontal"
            android:onClick="SonarSaxo"
            android:text="@string/saxofon"
            app:cornerRadius="0dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#B5472D30"
            android:gravity="bottom|center_horizontal"
            android:onClick="SonarArpa"
            android:text="@string/arpa"
            app:cornerRadius="0dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>