<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/compu"
    android:gravity="center|center_horizontal|center_vertical"
    android:padding="20dp"
    tools:context=".acerca_de">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="175dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:contentDescription="@string/foto_grupal"
        app:srcCompat="@drawable/grupal" />

    <LinearLayout
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/desarrolladores"
            android:textColor="#1E2132"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merari"
            android:textColor="#1E2132"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver"
            android:textColor="#1E2132"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/karen"
            android:textColor="#1E2132"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>