<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/teclado_clasico"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDo"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#EFEDED"
            android:gravity="bottom|center_horizontal"
            android:onClick="SonarDo"
            android:paddingTop="2dp"
            android:text="@string/dos"
            android:textColor="#444B51"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="@color/black" />

        <Button
            android:id="@+id/btnRe"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#EFEDED"
            android:gravity="bottom|center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/re"
            android:textColor="#444B51"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="@color/black" />

        <Button
            android:id="@+id/btnMi"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#EFEDED"
            android:gravity="bottom|center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/mi"
            android:textColor="#444B51"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="@color/black" />

        <Button
            android:id="@+id/btnFa"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#EFEDED"
            android:gravity="bottom|center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/fa"
            android:textColor="#444B51"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="@color/black" />

        <Button
            android:id="@+id/btnSol"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#EFEDED"
            android:gravity="bottom|center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/sol"
            android:textColor="#444B51"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="@color/black"/>

        <Button
            android:id="@+id/btnLa"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#EFEDED"
            android:gravity="bottom|center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/la"
            android:textColor="#444B51"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="@color/black" />

        <Button
            android:id="@+id/btnSi"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#EFEDED"
            android:gravity="bottom|center_horizontal"
            android:paddingTop="2dp"
            android:text="@string/si"
            android:textColor="#444B51"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:strokeColor="@color/black"/>
    </LinearLayout>

</LinearLayout>